IE - PPT alignment issue fix

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -110,7 +110,7 @@ p {
 /* This styling is for all images.
 ------------------------------------------------------------------ */
 
-img {
+img, .img_hdr {
   width: auto\9;
   height: auto;
   max-width: 100%;
@@ -135,17 +135,15 @@ img {
 .videoStyle {
   float:left;
   width: auto\9;
-  height: 100%;
-  width: 50%;
-  border: 5px solid #61625d;  
-  display: block;
-  *display: block;
+  height: auto;  
+  margin-left: 10%; 
+  display: inline-block;
+  *display: inline;
   *zoom: 1;
-  margin-left: 10%;
   -ms-interpolation-mode: bicubic;
 }
 
-.videoStyle:hover { background: #000; }
+.videoStyle:hover { background: #A47E3C; }
 
 	
 /* This styling is for PPT presentation iframe.
@@ -157,7 +155,7 @@ img {
 .ratio {
 	display: inline;
 	width: 100%;
-	height: 100%;
+	height: auto;
     width: auto\9;
     -ms-interpolation-mode: bicubic;	
 }
@@ -244,11 +242,9 @@ img {
  *
  *****************************************************************************/
 @media screen and (max-width: 340px){
-img {
-  
-  margin: 0% -1% 0% 0%;
-  
-}
+    img {  
+  		margin: 0% -1% 0% 0%;  
+ 	}
 }
 
 @media screen and (min-width: 479px) and (max-width: 599px){
@@ -265,33 +261,24 @@ img {
 	
 		
 	html, body{ 
-		margin: 1% 0% 0% -2%;
+		margin: 1% 0% 0% 2%;
 	}
-
 	
-	.img_content, .h_iframe .ratio {
-	  margin-left: 0%;
+	.ratio {
+		margin: 0;
+		display: inline;
+		min-height: 65%;
+		min-width: 100%;
 	}
 	
 	.iframe10 {	  
-	  width:100%; 
+	  min-width:100%; 
 	  height: 100%;
-	  min-height: auto;
 	}
 	
 	.videoStyle {
-	  width: auto\9;
-	  height: 75%;
-	  max-width: 100%;
-	  vertical-align: middle;
-	  margin-left: 10%;
-	  margin-top: 2%;
-	  
-	  border: 0;
-	  -ms-interpolation-mode: bicubic;
-	  display: inline-block;
-	  *display: inline;
-	  *zoom: 1;
+		margin: 0% 0% 0% 0%;
+		min-height: 70%;
 	}
 	
     .row-fluid > [class*="span"] 
@@ -307,18 +294,10 @@ img {
     width: 80%;
     }
     
+    .img_hdr{
+    	margin: 0;
+    }
+    
 }
 
-/***************************************************************************
- *  This styling is for Tablet landscape version.
- *
- *****************************************************************************/
 
-	@media screen and (max-width: 800px) {
-		body 
-		{ 
-			margin-top: 0%;
-			margin-left: 3%;
-			margin-right: 0%;			
-		}    
-}
